--- a/Oberfläche/src/AirSwimmerButtons/res/menu/start.xml
+++ b/Oberfläche/src/AirSwimmerButtons/res/menu/start.xml
@@ -1,9 +1,36 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
+<!--  Menu element for changing background -->
+        <item android:title="@string/change_background">
+            <!-- Submenu with different background pictures -->
+            <menu>
+                <item
+                    android:id="@+id/water"
+                    android:onClick="changeBackground"
+                    android:title="@string/water_picture"/>
+                <item
+                    android:id="@+id/sky"
+                    android:title="@string/sky_picture"/>
+            </menu>
+        </item>
+        <!--  Menu element for switching between different modes-->
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/action_settings"/>
+        android:id="@+id/change_mode"
+        android:title="@string/select_mode">
+        <menu>
+            <!-- Switch to normal remote control -->
+            <item
+                android:id="@+id/mode_remote"
+                android:title="@string/mode_remote"/>
+            <!--  Switch to control AirSwimmer via shaking target -->
+            <item
+                android:id="@+id/mode_shake"
+                android:title="@string/mode_shake"/>
+            <!--  Switch to control AirSwimmer via sliding fish on screen -->
+            <item
+                android:id="@+id/mode_slide"
+                android:title="@string/mode_slide"/>
+        </menu>
+    </item>
 
 </menu>
