--- a/Oberfläche/src/AirSwimmer/res/layout/front_page.xml
+++ b/Oberfläche/src/AirSwimmer/res/layout/front_page.xml
@@ -31,6 +31,7 @@
             
             android:onClick="onButtonClick"        
           
+            android:layout_marginTop="20dp"
             android:text="@string/Tasten"
             android:textColor="@color/Weiss"
             android:background="@color/Marineblau"
@@ -51,6 +52,9 @@
             style="@style/AppTheme"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            
+            android:onClick="onButtonClick" 
+            
             android:layout_marginTop="20dp"
             android:text="@string/Kippen"
             android:textColor="@color/Weiss"
