--- a/Oberfläche/src/AirSwimmerButtons/res/layout/activity_start.xml
+++ b/Oberfläche/src/AirSwimmerButtons/res/layout/activity_start.xml
@@ -6,7 +6,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@drawable/ic_wolke"
+    android:id="@+id/layout"
+    android:background="@drawable/ic_sky"
     tools:context=".StartActivity" >
     
     <ImageButton
