--- a/Oberfläche/src/AirSwimmerButtons/res/menu/start.xml
+++ b/Oberfläche/src/AirSwimmerButtons/res/menu/start.xml
@@ -4,13 +4,16 @@
         <item android:title="@string/change_background">
             <!-- Submenu with different background pictures -->
             <menu>
+                <group android:id="@+id/submenu_changeBackground" >
                 <item
                     android:id="@+id/water"
                     android:onClick="changeBackground"
                     android:title="@string/water_picture"/>
+                	
                 <item
                     android:id="@+id/sky"
                     android:title="@string/sky_picture"/>
+                </group>
             </menu>
         </item>
         <!--  Menu element for switching between different modes-->
@@ -18,6 +21,7 @@
         android:id="@+id/change_mode"
         android:title="@string/select_mode">
         <menu>
+             <group android:id="@+id/submenu_changeMode" >
             <!-- Switch to normal remote control -->
             <item
                 android:id="@+id/mode_remote"
@@ -30,6 +34,7 @@
             <item
                 android:id="@+id/mode_slide"
                 android:title="@string/mode_slide"/>
+            </group>
         </menu>
     </item>
 
