(von Sabine) Package in de.airswimmer.gui umbenannt BaseActivity mit Menü für verschiedene Oberflächen eingebaut Oberfläche Tasten: Tasten mit ImageButtons und Hintergrund Oberfläche Kippen: in eine Activity zusammengefasst Oberfläche dreht sich nicht mehr Zeichnen wird beim Beenden und bei Zurück beendet und bei erneutem Aufrufen wieder gestartet Hintergrund ändern angepasst

--- a/Oberfläche/src/AirSwimmer/res/layout/front_page.xml
+++ b/Oberfläche/src/AirSwimmer/res/layout/front_page.xml
@@ -32,7 +32,7 @@
             android:onClick="onButtonClick"        
           
             android:layout_marginTop="20dp"
-            android:text="@string/Tasten"
+            android:text="@string/mode_buttons"
             android:textColor="@color/Weiss"
             android:background="@color/Marineblau"
              />
@@ -43,7 +43,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="@string/Wischen"
+            android:text="@string/mode_wipe"
             android:textColor="@color/Weiss"
             android:background="@color/Marineblau"
             
@@ -58,7 +58,7 @@
             android:onClick="onButtonClick" 
             
             android:layout_marginTop="20dp"
-            android:text="@string/Kippen"
+            android:text="@string/mode_tilt"
             android:textColor="@color/Weiss"
             android:background="@color/Marineblau" />
     </LinearLayout>
