--- a/Oberfläche/src/AirSwimmer/res/menu/start.xml
+++ b/Oberfläche/src/AirSwimmer/res/menu/start.xml
@@ -1,9 +1,40 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
+<!--  Menu element for changing background -->
+        <item android:title="@string/change_background">
+            <!-- Submenu with different background pictures -->
+            <menu>
+                <group android:id="@+id/submenu_changeBackground" >
+                <item
+                    android:id="@+id/water"
+                    android:title="@string/water_picture"/>
+                	
+                <item
+                    android:id="@+id/sky"
+                    android:title="@string/sky_picture"/>
+                </group>
+            </menu>
+        </item>
+        <!--  Menu element for switching between different modes-->
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/action_settings"/>
+        android:id="@+id/change_mode"
+        android:title="@string/select_mode">
+        <menu>
+             <group android:id="@+id/submenu_changeMode" >
+            <!-- Switch to normal remote control -->
+            <item
+                android:id="@+id/mode_buttons"
+                android:title="@string/mode_buttons"/>
+            <!--  Switch to control AirSwimmer via shaking target -->
+            <item
+                android:id="@+id/mode_tilt"
+                android:title="@string/mode_tilt"/>
+            <!--  Switch to control AirSwimmer via sliding fish on screen -->
+            <item
+                android:id="@+id/mode_wipe"
+                android:title="@string/mode_wipe"/>
+            </group>
+        </menu>
+    </item>
 
 </menu>
