--- a/TeamIR_Sender/app_working/res/layout/activity_main.xml
+++ b/TeamIR_Sender/app_working/res/layout/activity_main.xml
@@ -58,4 +58,12 @@
         android:inputType="number"
         android:text="0" />
 
+    <Button
+        android:id="@+id/parseLirc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/playBtn"
+        android:layout_toLeftOf="@+id/playBtn"
+        android:text="ParseLirc" />
+
 </RelativeLayout>
