--- a/TeamIR_Sender/TestLirc/res/layout/activity_main.xml
+++ b/TeamIR_Sender/TestLirc/res/layout/activity_main.xml
@@ -8,19 +8,40 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity" >
 
-    <TextView
-        android:id="@+id/textView1"
+    <Button
+        android:id="@+id/Pdown"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:layout_centerVertical="true"
+        android:layout_toLeftOf="@+id/Button03"
+        android:text="Pdown" />
 
     <Button
-        android:id="@+id/dive"
+        android:id="@+id/Voldown"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textView1"
-        android:layout_marginTop="46dp"
-        android:layout_toRightOf="@+id/textView1"
-        android:text="dive!" />
+        android:layout_below="@+id/Pdown"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="73dp"
+        android:text="Voldown" />
+
+    <Button
+        android:id="@+id/Pup"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/Pdown"
+        android:layout_marginLeft="21dp"
+        android:layout_marginTop="14dp"
+        android:layout_toRightOf="@+id/Voldown"
+        android:text="Pup" />
+
+    <Button
+        android:id="@+id/Volup"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/Pup"
+        android:layout_marginBottom="22dp"
+        android:layout_toLeftOf="@+id/Pup"
+        android:text="Volup" />
 
 </RelativeLayout>
