Fisch Grafik verändert

--- a/Oberfläche/src/AirSwimmer/res/layout/activity_layout_wipe.xml
+++ b/Oberfläche/src/AirSwimmer/res/layout/activity_layout_wipe.xml
@@ -15,6 +15,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:src="@drawable/fish" />
+        android:src="@drawable/bellishark_1_medium" />
 
 </RelativeLayout>
