--- a/Oberfläche/src/AirSwimmer/res/layout/front_page.xml
+++ b/Oberfläche/src/AirSwimmer/res/layout/front_page.xml
@@ -29,6 +29,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background ="#00000000"
+        android:onClick="onButtonClick"
         android:layout_above="@+id/linearLayout2"
         android:layout_centerHorizontal="true"
         android:src="@drawable/hai_button_tilt" />
@@ -38,6 +39,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background ="#00000000"
+        android:onClick="onButtonClick"
         android:layout_below="@+id/linearLayout1"
         android:layout_centerHorizontal="true"
         android:src="@drawable/hai_button_button" />
@@ -47,6 +49,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background ="#00000000"
+        android:onClick="onButtonClick"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:src="@drawable/hai_button_wipe" />
