--- a/Oberfläche/src/AirSwimmer/res/layout/front_page.xml
+++ b/Oberfläche/src/AirSwimmer/res/layout/front_page.xml
@@ -24,16 +24,6 @@
         android:orientation="vertical" >
     </LinearLayout>
 
-    <ImageButton
-        android:id="@+id/Button_Button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/linearLayout1"
-        android:layout_centerHorizontal="true"
-        android:background="#00000000"
-        android:onClick="onButtonClick"
-        android:src="@drawable/air_swimmers_shark" />
-
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -43,6 +33,7 @@
         android:textSize="18sp" />
 
     <TextView
+        android:id="@+id/textView2"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/Button_Wipe"
@@ -60,21 +51,31 @@
         android:textSize="18sp" />
 
     <ImageButton
-        android:id="@+id/Button_Wipe"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/Button_Button"
-        android:layout_centerVertical="true"
-        android:background="#00000000"
-        android:onClick="onButtonClick"
-        android:src="@drawable/air_swimmers_shark" />
-
-    <ImageButton
         android:id="@+id/Button_Tilt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/Button_Wipe"
         android:layout_alignParentBottom="true"
+        android:background="#00000000"
+        android:onClick="onButtonClick"
+        android:src="@drawable/air_swimmers_shark" />
+
+    <ImageButton
+        android:id="@+id/Button_Wipe"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/Button_Tilt"
+        android:layout_alignLeft="@+id/Button_Button"
+        android:background="#00000000"
+        android:onClick="onButtonClick"
+        android:src="@drawable/air_swimmers_shark" />
+
+    <ImageButton
+        android:id="@+id/Button_Button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/textView2"
+        android:layout_centerHorizontal="true"
         android:background="#00000000"
         android:onClick="onButtonClick"
         android:src="@drawable/air_swimmers_shark" />
