--- a/Oberfläche/src/AirSwimmer/res/menu/start.xml
+++ b/Oberfläche/src/AirSwimmer/res/menu/start.xml
@@ -1,8 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
 <!--  Menu element for changing background -->
-        <item android:title="@string/change_background">
-            <!-- Submenu with different background pictures -->
+        <item android:title="@string/change_background" android:id="@+id/change_background">            <!-- Submenu with different background pictures -->
             <menu>
                 <group android:id="@+id/submenu_changeBackground" >
                 <item
@@ -33,6 +32,16 @@
             <item
                 android:id="@+id/mode_wipe"
                 android:title="@string/mode_wipe"/>
+            
+            </group>
+        </menu>
+    </item>
+    <item android:id="@+id/change_move_buttons" android:title="@string/change_move">
+        <menu>
+            <group android:id="@+id/submenu_changeMove">
+                <item android:id="@+id/permanent" android:title="@string/permanent"/><item
+                android:id="@+id/single"
+                android:title="@string/single"/>
             </group>
         </menu>
     </item>
