--- a/Oberfläche/src/AirSwimmer/res/menu/start.xml
+++ b/Oberfläche/src/AirSwimmer/res/menu/start.xml
@@ -11,6 +11,7 @@
                 <item
                     android:id="@+id/sky"
                     android:title="@string/sky_picture"/>
+                <item android:id="@+id/th_picture" android:title="@string/th_picture"/>
                 </group>
             </menu>
         </item>
