--- a/Oberfläche/src/AirSwimmer/res/layout/front_page.xml
+++ b/Oberfläche/src/AirSwimmer/res/layout/front_page.xml
@@ -3,7 +3,7 @@
     android:id="@+id/RelativeLayout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/app_colour"
+    android:background="@drawable/frontpage_background"
     android:columnCount="1" >
 
     <LinearLayout
@@ -25,58 +25,71 @@
     </LinearLayout>
 
     <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/Button_Button"
-        android:layout_alignLeft="@+id/Button_Button"
-        android:text="@string/button_buttonb"
-        android:textSize="18sp" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/Button_Wipe"
-        android:layout_alignLeft="@+id/Button_Wipe"
-        android:text="@string/button_wischen"
-        android:textSize="18sp" />
-
-    <TextView
         android:id="@+id/textView1"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/Button_Tilt"
-        android:layout_alignLeft="@+id/Button_Tilt"
+        android:layout_above="@+id/linearLayout2"
+        android:layout_alignLeft="@+id/textView2"
         android:text="@string/button_kippen"
-        android:textSize="18sp" />
-
-    <ImageButton
-        android:id="@+id/Button_Tilt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/Button_Wipe"
-        android:layout_alignParentBottom="true"
-        android:background="#00000000"
-        android:onClick="onButtonClick"
-        android:src="@drawable/air_swimmers_shark" />
+        android:textSize="30sp"
+        android:textStyle="bold"
+        android:typeface="sans" />
 
     <ImageButton
         android:id="@+id/Button_Wipe"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/Button_Tilt"
         android:layout_alignLeft="@+id/Button_Button"
+        android:layout_centerVertical="true"
         android:background="#00000000"
         android:onClick="onButtonClick"
+        android:scaleType="center"
         android:src="@drawable/air_swimmers_shark" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/Button_Button"
+        android:layout_alignParentRight="true"
+        android:layout_toRightOf="@+id/Button_Button"
+        android:text="@string/button_buttonb"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        android:typeface="sans" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/textView3"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/Button_Wipe"
+        android:text="@string/button_wischen"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        android:typeface="sans" />
 
     <ImageButton
         android:id="@+id/Button_Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/textView2"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:background="#00000000"
+        android:onClick="onButtonClick"
+        android:src="@drawable/air_swimmers_shark" />
+
+    <ImageButton
+        android:id="@+id/Button_Tilt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/textView1"
+        android:layout_alignLeft="@+id/Button_Wipe"
+        android:adjustViewBounds="false"
+        android:background="#00000000"
+        android:maxHeight="100dp"
+        android:maxWidth="100dp"
         android:onClick="onButtonClick"
         android:src="@drawable/air_swimmers_shark" />
 
