--- a/Oberfläche/src/AirSwimmer/res/layout/front_page.xml
+++ b/Oberfläche/src/AirSwimmer/res/layout/front_page.xml
@@ -36,7 +36,7 @@
         android:typeface="sans" />
 
     <ImageButton
-        android:id="@+id/Button_Wipe"
+        android:id="@+id/Button_Slide"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/Button_Button"
@@ -64,7 +64,7 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView3"
         android:layout_alignParentRight="true"
-        android:layout_below="@+id/Button_Wipe"
+        android:layout_below="@+id/Button_Slide"
         android:text="@string/button_wischen"
         android:textSize="30sp"
         android:textStyle="bold"
@@ -85,7 +85,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/textView1"
-        android:layout_alignLeft="@+id/Button_Wipe"
+        android:layout_alignLeft="@+id/Button_Slide"
         android:adjustViewBounds="false"
         android:background="#00000000"
         android:maxHeight="100dp"
