--- a/Oberfläche/src/AirSwimmer/res/layout/front_page.xml
+++ b/Oberfläche/src/AirSwimmer/res/layout/front_page.xml
@@ -6,53 +6,61 @@
     android:background="@drawable/frontpage_background"
     android:columnCount="1" >
 
-    <LinearLayout
-        android:id="@+id/linearLayout1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:orientation="vertical" >
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/linearLayout2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:orientation="vertical" >
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/linearLayout2"
-        android:layout_alignLeft="@+id/textView2"
-        android:text="@string/button_kippen"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        android:typeface="sans" />
-
     <ImageButton
         android:id="@+id/Button_Slide"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/Button_Button"
+        android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:background="#00000000"
         android:onClick="onButtonClick"
         android:scaleType="center"
         android:src="@drawable/air_swimmers_shark" />
 
+    <ImageButton
+        android:id="@+id/Button_Tilt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/Button_Slide"
+        android:layout_marginLeft="135dp"
+        android:layout_toRightOf="@+id/Button_Slide"
+        android:adjustViewBounds="false"
+        android:background="#00000000"
+        android:maxHeight="100dp"
+        android:maxWidth="100dp"
+        android:onClick="onButtonClick"
+        android:src="@drawable/air_swimmers_shark" />
+
+    <ImageButton
+        android:id="@+id/Button_Button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/Button_Slide"
+        android:layout_marginRight="134dp"
+        android:layout_toLeftOf="@+id/Button_Slide"
+        android:background="#00000000"
+        android:onClick="onButtonClick"
+        android:src="@drawable/air_swimmers_shark" />
+
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/textView1"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/Button_Button"
+        android:layout_alignBottom="@+id/textView3"
+        android:layout_alignLeft="@+id/Button_Tilt"
+        android:layout_below="@+id/Button_Slide"
+        android:text="@string/button_kippen"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        android:typeface="sans" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/Button_Button"
         android:layout_alignParentRight="true"
-        android:layout_toRightOf="@+id/Button_Button"
+        android:layout_below="@+id/Button_Slide"
         android:text="@string/button_buttonb"
         android:textSize="30sp"
         android:textStyle="bold"
@@ -60,37 +68,15 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="fill_parent"
+        android:layout_width="1189dp"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView3"
+        android:layout_alignBottom="@+id/textView3"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/Button_Slide"
+        android:layout_toRightOf="@+id/Button_Button"
         android:text="@string/button_wischen"
         android:textSize="30sp"
         android:textStyle="bold"
         android:typeface="sans" />
-
-    <ImageButton
-        android:id="@+id/Button_Button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:background="#00000000"
-        android:onClick="onButtonClick"
-        android:src="@drawable/air_swimmers_shark" />
-
-    <ImageButton
-        android:id="@+id/Button_Tilt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/textView1"
-        android:layout_alignLeft="@+id/Button_Slide"
-        android:adjustViewBounds="false"
-        android:background="#00000000"
-        android:maxHeight="100dp"
-        android:maxWidth="100dp"
-        android:onClick="onButtonClick"
-        android:src="@drawable/air_swimmers_shark" />
 
 </RelativeLayout>
