--- a/Oberfläche/src/AirSwimmer/res/layout/start_button_tilt.xml
+++ b/Oberfläche/src/AirSwimmer/res/layout/start_button_tilt.xml
@@ -25,9 +25,9 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/start_button_tilt1"
         android:layout_alignTop="@+id/start_button_tilt1"
-        android:layout_marginLeft="52dp"
-        android:layout_marginTop="44dp"
-        android:text="Start"
+        android:layout_marginLeft="18dp"
+        android:layout_marginTop="16dp"
+        android:text="Start single"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
 </RelativeLayout>
