--- a/Oberfläche/src/AirSwimmer/res/layout/activity_layout_buttons.xml
+++ b/Oberfläche/src/AirSwimmer/res/layout/activity_layout_buttons.xml
@@ -12,36 +12,40 @@
     
     <ImageButton
         android:id="@+id/imageButtonUp"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#00000000"
         android:layout_above="@+id/imageButtonRight"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="30dp"
         android:src="@drawable/up" />
 
     <ImageButton
-        android:id="@+id/imageButtonRight"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_centerVertical="true"
-        android:layout_toRightOf="@+id/imageButtonUp"
-        android:src="@drawable/right" />
-
-    <ImageButton
         android:id="@+id/imageButtonDown"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_below="@+id/imageButtonRight"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/imageButtonUp"
+        android:layout_below="@+id/imageButtonLeft"
         android:layout_marginTop="16dp"
-        android:layout_toLeftOf="@+id/imageButtonRight"
+        android:background="#00000000"
         android:src="@drawable/down" />
 
     <ImageButton
         android:id="@+id/imageButtonLeft"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_below="@+id/imageButtonUp"
-        android:layout_toLeftOf="@+id/imageButtonDown"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignTop="@+id/imageButtonRight"
+        android:background="#00000000"
         android:src="@drawable/left" />
+
+    <ImageButton
+        android:id="@+id/imageButtonRight"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:background="#00000000"
+        android:src="@drawable/right" />
 
 </RelativeLayout>
