--- a/Oberfläche/src/AirSwimmer/res/layout/activity_layout_buttons_permanent.xml
+++ b/Oberfläche/src/AirSwimmer/res/layout/activity_layout_buttons_permanent.xml
@@ -12,8 +12,9 @@
     
     <ImageButton
         android:id="@+id/imageButtonUp"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#00000000"
         android:layout_above="@+id/imageButtonRight"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="30dp"
@@ -21,16 +22,18 @@
 
     <ImageButton
         android:id="@+id/imageButtonRight"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+         android:background="#00000000"
         android:layout_centerVertical="true"
         android:layout_toRightOf="@+id/imageButtonUp"
         android:src="@drawable/right" />
 
     <ImageButton
         android:id="@+id/imageButtonDown"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+         android:background="#00000000"
         android:layout_below="@+id/imageButtonRight"
         android:layout_marginTop="16dp"
         android:layout_toLeftOf="@+id/imageButtonRight"
@@ -38,8 +41,9 @@
 
     <ImageButton
         android:id="@+id/imageButtonLeft"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#00000000"
         android:layout_below="@+id/imageButtonUp"
         android:layout_toLeftOf="@+id/imageButtonDown"
         android:src="@drawable/left" />
