--- a/finaleApp/AirSwimmer/res/layout/activity_set_sound.xml
+++ b/finaleApp/AirSwimmer/res/layout/activity_set_sound.xml
@@ -14,8 +14,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:max="15"
-        android:background="#FFFFFF" />
+        android:background="#FFFFFF"
+        android:clickable="false"
+        android:max="15" />
 
     <Button
         android:id="@+id/OKButton"
