Logik in Kippen zum Laufen gebracht Fehler behoben: Portraitorientierung bei Rückkehr zur Startseite war nicht gespeicherter Wert eindeutigere Benennung von Variablen der Startseite und auslagen der String in strings.xml Rückkehr zur Startseite bei Kippen verbessert Erinnerung an Irdroid bei Rückkehr zur Startseite ausgeschalten

--- a/finaleApp/AirSwimmer/res/menu/start.xml
+++ b/finaleApp/AirSwimmer/res/menu/start.xml
@@ -6,11 +6,11 @@
                 <group android:id="@+id/submenu_change_layout_orientation" >
                 <item
                     android:id="@+id/portrait"
-                    android:title="@string/orientation_portrait"/>
+                    android:title="@string/aux_shortSide"/>
                 	
                 <item
                     android:id="@+id/landscape"
-                    android:title="@string/orientation_landscape"/>
+                    android:title="@string/aux_longSide"/>
                 </group>
             </menu>
         </item>
